--- a/src/index.pug
+++ b/src/index.pug
@@ -7,3 +7,4 @@ html(lang="en")
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   body.
     Hello World!
+  include blocks/arrow-button/arrow-button.pug
