--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,14 @@ html(lang="en")
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  body.
-    Hello World!
+
+  body
   include blocks/arrow-button/arrow-button.pug
+  include blocks/percentages/percentages.pug
+
+  +arrow-button('left', 'inactive')
+  +arrow-button('right', 'inactive')
+  +arrow-button('left', 'disabled')
+  +arrow-button('right', 'disabled')
+  +arrow-button('left', 'enabled')
+  +arrow-button('right', 'enabled')
