Добавлена диаграмма бублик

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
   body
   include blocks/arrow-button/arrow-button.pug
   include blocks/percentages/percentages.pug
-
+  include blocks/pie-chart/pie-chart.pug
   +arrow-button('left', 'inactive')
   +arrow-button('right', 'inactive')
   +arrow-button('left', 'disabled')
