--- a/src/blocks/percentages/percentages.pug
+++ b/src/blocks/percentages/percentages.pug
@@ -1,6 +1,6 @@
 mixin percentages(percent)
-	<span class="chart" data-percent=#{percent}>
-		<span class="percent"></span>
+	<span class="percentages" data-percent=#{percent}>
+		<span class="percentages__percent"></span>
 	</span>
 
 +percentages(0)
