--- a/src/index.pug
+++ b/src/index.pug
@@ -16,3 +16,9 @@ html(lang="en")
   +arrow-button('right', 'disabled')
   +arrow-button('left', 'enabled')
   +arrow-button('right', 'enabled')
+
+  include blocks/standart-button/standart-button.pug
+
+  +standart-button()
+  +standart-button()
+  +standart-button()
