--- a/src/blocks/percentages/percentages.styl
+++ b/src/blocks/percentages/percentages.styl
@@ -1,20 +1,22 @@
-.chart {
-  position: relative;
-  display: inline-block;
-  width: 110px;
-  height: 110px;
-  text-align: center;
-}
-.chart canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.percent {
-  display: inline-block;
-  line-height: 110px;
-  z-index: 2;
-  font-size: 2.5rem;
-  color: #b1b1b1;
-  font-family: LatoWebLight;
-}
+$percent-color = #b1b1b1;
+
+.percentages
+	position: relative;
+	display: inline-block;
+	width: 110px;
+	height: 110px;
+	text-align: center;
+
+	canvas 
+		position: absolute;
+		top: 0;
+		left: 0;
+
+	&__percent
+		display: inline-block;
+		line-height: 110px;
+		z-index: 2;
+		font-size: 2.5rem;
+		color: $percent-color;
+		font-family: LatoWebLight;
+
