--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,7 @@ html(lang="en")
 
   include blocks/standart-button/standart-button.pug
 
-  +standart-button()
-  +standart-button()
-  +standart-button()
+  +standart-button('normal','small')
+  +standart-button('normal','normal')
+  +standart-button('error','normal')
+  +standart-button('error','small')
