--- a/src/blocks/standart-button/standart-button.pug
+++ b/src/blocks/standart-button/standart-button.pug
@@ -1,3 +1,3 @@
-mixin standart-button()
-	div.standart-button
+mixin standart-button(type, size)
+	div(class='standart-button ' + 'standart-button_type-'+type +' '+ 'standart-button_size-' + size) 
 		button.standart-button__button Button
