--- a/src/blocks/standart-button/standart-button.styl
+++ b/src/blocks/standart-button/standart-button.styl
@@ -24,11 +24,14 @@ $standart-button-error-shadow-color = #bf3e1f
 		font-family: LatoWebBlack, 'Arial';
 
 	&_size-normal &__button
-		padding: 1rem 2rem 1rem 2rem;
+		font-szie: 0.8rem;
+		padding: 0.6rem 1.9rem 0.3rem;
 
 	&_size-small &__button
-		min-width: 6.5rem;
-		padding: 0.4rem 1rem 0.2rem;
+		font-size: 0.65rem;
+		padding-left: 1rem;
+		padding-right: 1rem;
+		padding-top: 0.34rem;
 
 	&_type-error
 		color: $standart-button-error-color;
@@ -37,3 +40,30 @@ $standart-button-error-shadow-color = #bf3e1f
 		background-color: $standart-button-error-color;
 		border-color: $standart-button-error-color;
 		box-shadow: 0 0.25rem 0 0 $standart-button-error-shadow-color;
+
+	&_pressed &__button
+		box-shadow: none;
+
+	&.standart-button_inverted &__button
+		background-color: white;
+		color: inherit;
+
+	&_ripple-effect
+		width: 0;
+		height: 0;
+		border-radius: 50%;
+		background: rgba(255, 255, 255, 0.4);
+		transform: scale(0);
+		position: absolute;
+		opacity: 1;
+
+	&_ripple-animation{
+		animation: ripple-drop .4s linear;
+}
+
+@keyframes ripple-drop {
+	100% {
+		transform: scale(0.5);
+		opacity: 0;
+	}
+}
