Сделал первый слайдер

--- a/src/index.pug
+++ b/src/index.pug
@@ -24,3 +24,8 @@ html(lang="en")
   +standart-button('normal','normal','button')
   +standart-button('error','normal','button')
   +standart-button('error','small','button')
+
+  include blocks/slider-discret/slider-discret.pug
+  +slider-discret()
+
+  include blocks/slider-continuous/slider-continuous.pug
