--- a/src/index.pug
+++ b/src/index.pug
@@ -27,5 +27,11 @@ html(lang="en")
 
   include blocks/slider-discret/slider-discret.pug
   +slider-discret()
-
+  br
+  br
+  br
+  br
   include blocks/slider-continuous/slider-continuous.pug
+  +slider-continuous()
+
+  include blocks/stages/stages.pug
