Добавлен input для форм

--- a/src/index.pug
+++ b/src/index.pug
@@ -41,3 +41,7 @@ html(lang="en")
   br
   include blocks/tick-box/tick-box.pug
   +tick-box()
+  br
+  br
+  include blocks/flat-input/flat-input.pug
+  +flat-input('text')
