--- a/src/blocks/feedback/feedback.styl
+++ b/src/blocks/feedback/feedback.styl
@@ -1,42 +1,45 @@
 .feedback
-	background-color: gray;
-	max-width: 20rem;
-	padding: 1rem;
+	max-width: 18rem;
 	&__name, &__email
 		display: flex;	
-		min-width: 10rem;
 	&__email
-		margin-top: 1rem;
+		margin-top: 0.9rem;
 	&__validation
 		position: relative;
-		border-radius: 11px;
-		margin-left: 1rem;
+		font-family: LatoWebBlack, 'Arial';
+		font-size: 0.7rem;
+		color: white;
+		border-radius: 4px;
+		margin-left: 0.5rem;
 		text-transform: uppercase;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		min-width: 6rem;
+		min-width: 4.5rem;
+		display: none;
+		&_ok, &_error
+			display: flex;
 		&_ok
-			background-color: green;
+			background-color: #4eb7a8;
 			&:after
-								border-top: 1rem solid green;
+								border-top: 1rem solid #4eb7a8;
 		&_error
-			background-color: red;
+			background-color: #e75735;
 			&:after
-								border-top: 1rem solid red;
+								border-top: 1rem solid #e75735;
 		&:after
 			position: absolute;
 			display: block;
 			content: "";
 			width: 0;
 			height: 0;
-			border-left: 0.9rem solid transparent;
-			border-right: 0.9rem solid transparent;
-			transform: rotate(90deg) translateX(-1rem);
-			right: 5rem;
+			border-left: 0.8rem solid transparent;
+			border-right: 0.8rem solid transparent;
+			transform: rotate(90deg) translateX(-0.85rem);
+			right: 3.5rem;
 
 	&__submit
-		margin-top: 1rem;
+		margin-top: 0.6rem;
 		text-align: right;
 
 	&__input, &__textarea
@@ -46,14 +49,13 @@
 		border-radius: 4px;
 		font-family: SourceSansPro-Regular, 'Arial';
 		background-color: #e5e5e5;
-		padding-top: 0.5rem;
-		padding-bottom: 0.5rem;
+		padding: 0.31rem 1rem;
 		border: none;
 		resize: none;
 
 	&__textarea
 		width 100%;
-		padding-top: 1rem;
-		margin-top: 1rem;
-		min-height: 5rem;
-
+		padding-top: 0.6rem;
+		margin-top: 0.8rem;
+		min-height: 5.4rem;
+		box-sizing: border-box;
