Добавлена строка поиска

--- a/src/blocks/feedback/feedback.styl
+++ b/src/blocks/feedback/feedback.styl
@@ -3,7 +3,7 @@
 	&__name, &__email
 		display: flex;	
 	&__email
-		margin-top: 0.9rem;
+		margin-top: 0.75rem;
 	&__validation
 		position: relative;
 		font-family: LatoWebBlack, 'Arial';
@@ -49,12 +49,13 @@
 		border-radius: 4px;
 		font-family: SourceSansPro-Regular, 'Arial';
 		background-color: #e5e5e5;
-		padding: 0.31rem 1rem;
+		padding: 0.35rem 0.85rem;
 		border: none;
-		resize: none;
+		outline: none;
 
 	&__textarea
 		width 100%;
+		resize: none;
 		padding-top: 0.6rem;
 		margin-top: 0.8rem;
 		min-height: 5.4rem;
