--- a/src/index.pug
+++ b/src/index.pug
@@ -45,3 +45,11 @@ html(lang="en")
   br
   include blocks/feedback/feedback.pug
   +feedback()
+  br
+  br
+  include blocks/search/search.pug
+  +search()
+  br
+  br
+  include blocks/drop-down/drop-down.pug
+  +drop-down()
