--- a/src/index.pug
+++ b/src/index.pug
@@ -52,4 +52,14 @@ html(lang="en")
   br
   br
   include blocks/drop-down/drop-down.pug
-  +drop-down()
+  +drop-down(['Orange','Apple','Pear'])
+  br
+  br
+  br
+  br
+  br
+  br
+  br
+  br
+  br
+  br
