Исправлен блок профиль пользователя

--- a/src/blocks/user-profile/user-profile.pug
+++ b/src/blocks/user-profile/user-profile.pug
@@ -10,12 +10,12 @@ mixin user-profile(options)
 			.user-profile__name= options.name ? options.name : 'Anonymous'
 			.user-profile__proffesion= options.proffesion ? options.proffesion : 'Unknown'
 			.user-profile__links
-				a.user-profile__links_facebook(
+				a.user-profile__link_facebook.user-profile__link(
 					href=options['facebook'] ? options['facebook'] : '#', 
 					class=options['facebook'] ? 'user-profile__links_active' : '')
-				a.user-profile__links_twitter(
+				a.user-profile__link_twitter.user-profile__link(
 					href=options['twitter'] ? options['twitter'] : '#', 
 					class=options['twitter'] ? 'user-profile__links_active' : '')
-				a.user-profile__links_dribbble(
+				a.user-profile__link_dribbble.user-profile__link(
 					href=options['dribbble'] ? options['dribbble'] : '#', 
 					class=options['dribbble'] ? 'user-profile__links_active' : '')
