--- a/src/blocks/standart-button/standart-button.styl
+++ b/src/blocks/standart-button/standart-button.styl
@@ -18,20 +18,18 @@ $standart-button-error-shadow-color = #bf3e1f
 		outline: none;
 		width: 100%;
 		background-color: $standart-button-color;
-		border-radius: 0.25rem;
-		border: 0.1rem solid $standart-button-color;
-		box-shadow: 0 0.25rem 0 0 $standart-button-shadow-color;
+		border-radius: 4px;
+		border: 1px solid $standart-button-color;
+		box-shadow: 0 0.15rem 0 0 $standart-button-shadow-color;
 		font-family: LatoWebBlack, 'Arial';
 
 	&_size-normal &__button
-		font-szie: 0.8rem;
-		padding: 0.6rem 1.9rem 0.3rem;
+		font-size: 0.8rem;
+		padding: 0.6rem 2rem 0.45rem;
 
 	&_size-small &__button
 		font-size: 0.65rem;
-		padding-left: 1rem;
-		padding-right: 1rem;
-		padding-top: 0.34rem;
+		padding: 0.35rem 1.1rem 0.2rem;
 
 	&_type-error
 		color: $standart-button-error-color;
@@ -39,7 +37,7 @@ $standart-button-error-shadow-color = #bf3e1f
 	&_type-error &__button
 		background-color: $standart-button-error-color;
 		border-color: $standart-button-error-color;
-		box-shadow: 0 0.25rem 0 0 $standart-button-error-shadow-color;
+		box-shadow: 0 0.15rem 0 0 $standart-button-error-shadow-color;
 
 	&_pressed &__button
 		box-shadow: none;
