--- a/src/index.pug
+++ b/src/index.pug
@@ -68,3 +68,23 @@ html(lang="en")
   })
 
   +user-profile()
+
+  br
+  br
+  include blocks/news/news.pug
+  +news({
+    imgsrc: 'http://static.tumblr.com/u7rwwlh/nyNm6v1n7/tonyavatar.png',
+    title: 'It\'s all going downhill',
+    date: '24 august 2014',
+    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
+  })
+  br
+  br
+  include blocks/event/event.pug
+  +event({
+    imgsrc: 'http://static.tumblr.com/u7rwwlh/nyNm6v1n7/tonyavatar.png',
+    title: 'this is the title',
+    day: '24',
+    month: 'august',
+    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
+  })
