Доделан блок события (event)

--- a/src/blocks/event/event.styl
+++ b/src/blocks/event/event.styl
@@ -11,31 +11,37 @@
 	&__text
 		display: flex;
 		flex-direction: column;
-		padding: 7.5%;
+		padding: 4.5% 7% 1.5%;
 		background-color: #e75735;
 		color: white;
 
-		& > *:not(:first-child)
-			margin-top: 6.5%;
-
 	&__date
 		display: inline-flex;
+		font-family: LatoWebLight;
+		padding-bottom: 4%;
+		align-items: baseline;
+
+	&__day
+		font-size: 4.25rem;
+		padding-right: 8%;
+
+	&__month
+		font-size: 1.8rem;
 
 	&__button
-		padding: none;
-		font-size: 0.75rem;
+		text-align: center;
+		margin-top: 10%;
 
 	&__title
-		font-family: LatoWebLight, 'Arial';
-		font-size: 1.7rem;
-		line-height: 1.7rem;
+		font-family: LatoWebBlack, 'Arial';
+		text-transform: uppercase;
+		font-size: 0.85rem;
 
 	&__date
-		text-transform: uppercase;
-		font-family: LatoWebBlack, 'Arial';
-		font-size: 0.75rem;
+		text-transform: capitalize;
 
 	&__description
 		font-family: LatoWeb, 'Arial';
 		overflow: hidden;
 		font-size: 0.75rem;
+		max-height: 1.8rem;
