--- a/src/index.pug
+++ b/src/index.pug
@@ -85,6 +85,6 @@ html(lang="en")
     imgsrc: 'http://static.tumblr.com/u7rwwlh/nyNm6v1n7/tonyavatar.png',
     title: 'this is the title',
     day: '24',
-    month: 'august',
-    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed condimentum aliquet venenatis. Etiam a nisi nunc, a tincidunt eros.'
+    month: 'aug',
+    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
   })
