Добавлен блок messager (Не доделан)

--- a/src/index.pug
+++ b/src/index.pug
@@ -92,3 +92,5 @@ html(lang="en")
   br
   include blocks/location/location.pug
   +location()
+  include blocks/messager/messager.pug
+  +messager()
