--- a/src/blocks/standart-button/standart-button.styl
+++ b/src/blocks/standart-button/standart-button.styl
@@ -8,6 +8,7 @@ $standart-button-error-shadow-color = #bf3e1f
 	position: relative;
 	display: inline-block;
 	color: $standart-button-color;
+	width: inherit;
 
 	&__button
 		color: white;
