--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -2,25 +2,31 @@
 	box-sizing: border-box;
 	width: 500px;
 	min-width: 390px;
-	height: 600px;
-	background: orange;
+	height: 630px;
+	background: #f2f2f2;
 	padding: 25px;
 	margin: 20px;
-	box-shadow: 0 3px #ccc;
+
+	&__textarea
+		width: 100%;
+
+	&__button-reply
+		margin-top: 2%;
+		width: 100%;
 
 	&__chatlogs
 		padding: 10px;
 		width: 100%;
-		height: 450px;
+		height: 430px;
 		overflow-x: hidden;
 		overflow-y: scroll;
 
 		&::-webkit-scrollbar
-			width: 12px;
+			width: 6px;
 
 		&::-webkit-scrollbar-thumb
 			border-radius: 5px;
-			background: rgba(0,0,0,.4)
+			background: rgba(0,0,0,.0)
 
 	&__chat
 		display: flex;
@@ -32,51 +38,40 @@
 		& .messager__message
 			width: 70%;
 			padding: 15px;
-			background: blue;
 			margin: 5px 10px 0;
 			border-radius: 10px;
-			color: #fff;
+			color: #868686;
 			font-size: 18px;
+			font-family: LatoWebBold, 'Arial';
 
 
 	&__friend .messager__message
-		background: #1adda4;
+		background: #fff;
+
+	&__self .messager__message
+		background: #fff;
 
 	&__self
 		justify-content: flex-end;
 
-	&__self .messager__message
-		background: #1ddced;
-
 	&__form
 		margin-top: 20px;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 
 	&__form textarea
-			backface-visibility: #fbfbfb;
-			width: 75%;
-			height: 50px;
-			border: 2px solid #eee;
+			background-color: #e5e5e5;
+			height: 70px;
+			border: 3px solid #fff;
 			border-radius: 3px;
 			resize: none;
 			padding: 10px;
 			font-size: 18px;
 			color: #333;
+			box-sizing: border-box;
+			width: 100%;
+			outline: none;
 
 	&__form textarea:focus
 		background: #fff;
-
-	&__form button
-		background: #1ddced;
-		padding: 5px 15px;
-		font-size: 30px;
-		color: #fff;
-		border: none;
-		margin: 0 10px;
-		border-radius: 3px;
-		box-shadow: 0 3px 0 #0eb2c1;
-		cursor: pointer;
-
-	&__form button:hover
-		background: #13c8d9;
