Доделан блок messager

--- a/src/blocks/messager/messager.pug
+++ b/src/blocks/messager/messager.pug
@@ -2,24 +2,33 @@ include ../standart-button/standart-button.pug
 
 mixin messager()
 	.messager
+		.messager__friend
+			.messager__friend_name Sarah Brown
+			.messager__friend-information
+				.messager__vertical-position
+					img(src='http://static.tumblr.com/u7rwwlh/nyNm6v1n7/tonyavatar.png', alt='avatar',
+					class='messager__friend-information_photo')
+		.messager__actions
+			a(class="messager__actions_message", href="#")
+			a(class="messager__actions_photo", href="#")
 		.messager__chatlogs
-			.messager__chat.messager__friend
+			.messager__chat.messager__chat_friend
 				p.messager__message What's up, Brother..!!
-			.messager__chat.messager__self
+			.messager__chat.messager__chat_self
 				p.messager__message What's up..!!
-			.messager__chat.messager__friend
+			.messager__chat.messager__chat_friend
 				p.messager__message.
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
 					deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
 					officia qui, distinctio provident, dolores veritatis voluptatibus!
-			.messager__chat.messager__self
+			.messager__chat.messager__chat_self
 				p.messager__message.
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
 					deleniti quidem laboriosam. Dolor sapiente consequuntur nobis 
 					officia qui, distinctio provident, dolores veritatis voluptatibus!
-			.messager__chat.messager__friend
+			.messager__chat.messager__chat_friend
 				p.messager__message.
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					Mollitia laborum veritatis molestiae aliquam iusto officia sed 
