--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -4,8 +4,54 @@
 	min-width: 390px;
 	height: 630px;
 	background: #f2f2f2;
-	padding: 25px;
 	margin: 20px;
+
+	&__friend-information
+		display: flex;
+		justify-content: center;
+		background: #28A290;
+		height: 2rem;
+
+		&_photo
+			width: 88px;
+			height: 88px;
+			background-size: cover;
+			background-position: center;
+			border: 3px solid #E5E5E5;
+			border-radius: 50%;
+
+	&__vertical-position
+		position: absolute;
+		top: 3.5rem;
+
+	&__actions
+		display: flex;
+		justify-content: space-between;
+		font-family: FontAwesome;
+		color: #8e8d8d;
+		font-size: 1.4rem;
+		padding: 5% 6% 2%;
+
+		&_message, &_photo
+			color: inherit;
+			text-decoration: none;
+
+		&_message::before
+			content: '\F0E0';
+
+		&_photo::before
+			content: '\F030';
+
+	&__friend
+		position: relative;
+
+		&_name
+			text-align: center;
+			background-color: #4eb7a8;
+			color: #fff;
+			font-family: LatoWebLight;
+			font-size: 1.9rem;
+			padding: 4% 2%;
 
 	&__textarea
 		width: 100%;
@@ -15,11 +61,12 @@
 		width: 100%;
 
 	&__chatlogs
-		padding: 10px;
 		width: 100%;
 		height: 430px;
 		overflow-x: hidden;
 		overflow-y: scroll;
+		padding: 25px;
+		box-sizing: border-box;
 
 		&::-webkit-scrollbar
 			width: 6px;
@@ -45,20 +92,20 @@
 			font-family: LatoWebBold, 'Arial';
 
 
-	&__friend .messager__message
+	&__chat_friend .messager__message
 		background: #fff;
 
-	&__self .messager__message
+	&__chat_self .messager__message
 		background: #fff;
 
-	&__self
+	&__chat_self
 		justify-content: flex-end;
 
 	&__form
-		margin-top: 20px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		padding: 20px;
 
 	&__form textarea
 			background-color: #e5e5e5;
