Изменены размеры блока message

--- a/src/blocks/messager/messager.pug
+++ b/src/blocks/messager/messager.pug
@@ -13,7 +13,7 @@ mixin messager()
 			a(class="messager__actions_photo", href="#")
 		.messager__chatlogs
 			.messager__chat.messager__chat_friend
-				p.messager__message What's up, Brother..!!
+				p.messager__message Hey! So are we cool to meet at the art gallery? Say 8pm
 			.messager__chat.messager__chat_self
 				p.messager__message What's up..!!
 			.messager__chat.messager__chat_friend
