--- a/src/blocks/messager/messager.styl
+++ b/src/blocks/messager/messager.styl
@@ -1,16 +1,14 @@
 .messager
 	box-sizing: border-box;
-	width: 500px;
-	min-width: 390px;
-	height: 630px;
+	width: 100%;
+	max-width: 18rem;
 	background: #f2f2f2;
-	margin: 20px;
 
 	&__friend-information
 		display: flex;
 		justify-content: center;
 		background: #28A290;
-		height: 2rem;
+		height: 2.15rem;
 
 		&_photo
 			width: 88px;
@@ -22,7 +20,7 @@
 
 	&__vertical-position
 		position: absolute;
-		top: 3.5rem;
+		top: 4.5rem;
 
 	&__actions
 		display: flex;
@@ -30,7 +28,7 @@
 		font-family: FontAwesome;
 		color: #8e8d8d;
 		font-size: 1.4rem;
-		padding: 5% 6% 2%;
+		padding: 7.1% 9% 2%;
 
 		&_message, &_photo
 			color: inherit;
@@ -51,7 +49,7 @@
 			color: #fff;
 			font-family: LatoWebLight;
 			font-size: 1.9rem;
-			padding: 4% 2%;
+			padding: 7% 0 9%;
 
 	&__textarea
 		width: 100%;
@@ -62,10 +60,10 @@
 
 	&__chatlogs
 		width: 100%;
-		height: 430px;
+		max-height: 9rem;
 		overflow-x: hidden;
 		overflow-y: scroll;
-		padding: 25px;
+		padding-top: 0.5rem;
 		box-sizing: border-box;
 
 		&::-webkit-scrollbar
@@ -79,16 +77,16 @@
 		display: flex;
 		flex-flow: row wrap;
 		align-items: flex-start;
-		margin-bottom: 10px;
+		margin-bottom: 0.5rem;
 
 
 		& .messager__message
 			width: 70%;
-			padding: 15px;
-			margin: 5px 10px 0;
-			border-radius: 10px;
+			padding: 2.5%
+			margin: 2% 4% 0;
+			border-radius: 7px;
 			color: #868686;
-			font-size: 18px;
+			font-size: 0.85rem;
 			font-family: LatoWebBold, 'Arial';
 
 
@@ -105,16 +103,16 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding: 20px;
+		padding: 6.5%;
 
 	&__form textarea
 			background-color: #e5e5e5;
-			height: 70px;
+			height: 5rem;
 			border: 3px solid #fff;
 			border-radius: 3px;
 			resize: none;
-			padding: 10px;
-			font-size: 18px;
+			font-size: 0.9rem;
+			font-family: LatoWebBold;
 			color: #333;
 			box-sizing: border-box;
 			width: 100%;
