--- a/src/index.pug
+++ b/src/index.pug
@@ -1,10 +1,10 @@
 doctype html
 html(lang="en")
   head
-    title Site_2
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    title Site_2
     script(src= 'https://maps.googleapis.com/maps/api/js')
   body
   include blocks/arrow-button/arrow-button.pug
@@ -94,3 +94,5 @@ html(lang="en")
   +location()
   include blocks/messager/messager.pug
   +messager()
+  include blocks/calendar/calendar.pug
+  +calendar()
