Изменён блок calendar (Не доделан)

--- a/src/blocks/calendar/calendar.styl
+++ b/src/blocks/calendar/calendar.styl
@@ -1,141 +1,101 @@
-.ui-datepicker,
-.ui-datepicker table,
-.ui-datepicker tr,
-.ui-datepicker td,
-.ui-datepicker th {
-    margin: 0;
-    padding: 0;
-    border: none;
-    border-spacing: 0;
-}
+.calendar .ui-datepicker-year
+	display: none;
 
-.ui-datepicker {
-    display: none;
-    width: 294px;
-    padding: 35px;
-    cursor: default;
- 
-    text-transform: uppercase;
-    font-family: Tahoma;
-    font-size: 12px;
- 
-    background: #141517;
- 
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
- 
-    -webkit-box-shadow: 0px 1px 1px rgba(255,255,255, .1), inset 0px 1px 1px rgb(0,0,0);
-    -moz-box-shadow: 0px 1px 1px rgba(255,255,255, .1), inset 0px 1px 1px rgb(0,0,0);
-    box-shadow: 0px 1px 1px rgba(255,255,255, .1), inset 0px 1px 1px rgb(0,0,0);
-}
+.calendar .ui-datepicker
+	padding: 0;
+	width: 17.45em;
 
-.ui-datepicker-header {
-    position: relative;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #d6d6d6;
-}
- 
-.ui-datepicker-title { text-align: center; }
- 
-.ui-datepicker-month {
-    position: relative;
-    padding-right: 15px;
-    color: #565656;
-}
- 
-.ui-datepicker-year {
-    padding-left: 8px;
-    color: #a8a8a8;
-}
+.calendar .ui-widget.ui-widget-content
+	border: none;
 
-.ui-datepicker-month:before {
-    display: block;
-    position: absolute;
-    top: 5px;
-    right: 0;
-    width: 5px;
-    height: 5px;
-    content: '';
- 
-    background: #a5cd4e;
-    background: -moz-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a5cd4e), color-stop(100%,#6b8f1a));
-    background: -webkit-linear-gradient(top, #a5cd4e 0%,#6b8f1a 100%);
-    background: -o-linear-gradient(top, #a5cd4e 0%,#6b8f1a 100%);
-    background: -ms-linear-gradient(top, #a5cd4e 0%,#6b8f1a 100%);
-    background: linear-gradient(top, #a5cd4e 0%,#6b8f1a 100%);
- 
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
+.calendar .ui-corner-all,
+.calendar .ui-corner-bottom,
+.calendar .ui-corner-right,
+.calendar .ui-corner-br
+	border: none;
+	border-radius: 0;
 
-.ui-datepicker-prev,
-.ui-datepicker-next {
-    position: absolute;
-    top: -2px;
-    padding: 5px;
-    cursor: pointer;
-}
- 
-.ui-datepicker-prev {
-    left: 0;
-    padding-left: 0;
-}
- 
-.ui-datepicker-next {
-    right: 0;
-    padding-right: 0;
-}
- 
-.ui-datepicker-prev span,
-.ui-datepicker-next span{
-    display: block;
-    width: 5px;
-    height: 10px;
-    text-indent: -9999px;
- 
-}
- 
-.ui-datepicker-prev span { background-position: 0px 0px; }
- 
-.ui-datepicker-next span { background-position: -5px 0px; }
- 
-.ui-datepicker-prev-hover span { background-position: 0px -10px; }
- 
-.ui-datepicker-next-hover span { background-position: -5px -10px; }
+.ui-state-active, 
+.calendar .ui-widget-content .ui-state-active, 
+.calendar .ui-widget-header .ui-state-active, 
+.calendar a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover,
+.calendar .ui-state-default.ui-state-highlight.ui-state-active
+	background: #E75735;
+	color: white;
+	border: none;
 
-.ui-datepicker-calendar th {
-    padding-top: 15px;
-    padding-bottom: 10px;
- 
-    text-align: center;
-    font-weight: normal;
-    color: #a8a8a8;
-}
+.calendar .ui-widget-content .ui-state-highlight
+	border: none;
+	background-color: #F6F6F6;
+	color: #868686;
 
-.ui-datepicker-calendar td {
-    padding: 0 7px;
- 
-    text-align: center;
-    line-height: 26px;
-}
- 
-.ui-datepicker-calendar .ui-state-default {
-    display: block;
-    width: 26px;
-    outline: none;
- 
-    text-decoration: none;
-    color: #a8a8a8;
- 
-    border: 1px solid transparent;
-}
+.calendar .ui-widget-content .ui-state-default
+	border: none;
 
-.ui-datepicker-calendar .ui-state-active {
-    color: #6a9113;
-    border: 1px solid #6a9113;
-}
- 
-.ui-datepicker-other-month .ui-state-default { color: #565656; }
+.calendar .ui-datepicker-calendar thead
+	background: #e75735;
+	color: #FFF;
+	font-family: LatoWebBlack, 'Arial';
+	text-transform: uppercase;
+	font-size: 10px;
+
+.calendar .ui-datepicker-calendar tbody a,
+.calendar .ui-datepicker-calendar tbody span
+	color: #868686;
+	background: #F2F2F2;
+	font-family: SourceSansPro-Regular, 'Arial';
+	font-size: 1.25rem;
+	padding: 0.335em;
+	text-align: -webkit-center;
+
+.calendar .ui-datepicker-calendar tbody span
+	color: #FFF;
+
+.calendar .ui-state-disabled,
+.calendar .ui-widget-content .ui-state-disabled
+	opacity: 1;
+
+.calendar .ui-datepicker .ui-datepicker-title
+	color: #FFF;
+	font-family: LatoWebLight;
+	font-size: 1.4rem;
+	font-weight: normal;
+
+.calendar .ui-datepicker .ui-datepicker-header
+	background: #d54c2c;
+
+.calendar .ui-icon.ui-icon-circle-triangle-e,
+.calendar .ui-icon.ui-icon-circle-triangle-w
+	display: none;
+
+.calendar .ui-datepicker-prev,
+.calendar .ui-datepicker-next
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.5rem;
+	cursor: pointer;
+
+.calendar .ui-datepicker-prev.ui-datepicker-prev-hover,
+.calendar .ui-datepicker-next.ui-datepicker-next-hover
+	background-color: inherit
+	border-radius: 0;
+	font-weight: inherit;
+	border: 1px solid #d54c2c;
+
+.calendar .ui-datepicker-prev > *,
+.calendar .ui-datepicker-prev.ui-datepicker-prev-hover > *,
+.calendar .ui-datepicker-next > *,
+.calendar .ui-datepicker-next.ui-datepicker-next-hover > *
+	display: none;
+
+.calendar .ui-datepicker-prev::after
+	font-family: FontAwesome;
+	content: '\f104';
+	color: white;
+
+.calendar .ui-datepicker-next::after
+	font-family: FontAwesome;
+	content: '\f105';
+	color: white;
+
