--- a/src/blocks/calendar/calendar.styl
+++ b/src/blocks/calendar/calendar.styl
@@ -1,101 +1,125 @@
-.calendar .ui-datepicker-year
-	display: none;
+.calendar
+	max-width: 17rem;
 
-.calendar .ui-datepicker
-	padding: 0;
-	width: 17.45em;
+	& .ui-datepicker-year
+		display: none;
 
-.calendar .ui-widget.ui-widget-content
-	border: none;
+	& .ui-datepicker
+		padding: 0;
+		max-width: 17.45rem;
 
-.calendar .ui-corner-all,
-.calendar .ui-corner-bottom,
-.calendar .ui-corner-right,
-.calendar .ui-corner-br
-	border: none;
-	border-radius: 0;
+	& .ui-datepicker table
+		margin: 0 0 .1em;
 
-.ui-state-active, 
-.calendar .ui-widget-content .ui-state-active, 
-.calendar .ui-widget-header .ui-state-active, 
-.calendar a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover,
-.calendar .ui-state-default.ui-state-highlight.ui-state-active
-	background: #E75735;
-	color: white;
-	border: none;
+	& .ui-widget.ui-widget-content
+		border: none;
 
-.calendar .ui-widget-content .ui-state-highlight
-	border: none;
-	background-color: #F6F6F6;
-	color: #868686;
+	& .ui-corner-all,
+	& .ui-corner-bottom,
+	& .ui-corner-right,
+	& .ui-corner-br
+		border: none;
+		border-radius: 0;
 
-.calendar .ui-widget-content .ui-state-default
-	border: none;
+	& .ui-widget-content .ui-state-active, 
+	& .ui-widget-header .ui-state-active, 
+	& a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover,
+	& .ui-state-default.ui-state-highlight.ui-state-active
+		background: #E75735;
+		color: white;
+		border: none;
 
-.calendar .ui-datepicker-calendar thead
-	background: #e75735;
-	color: #FFF;
-	font-family: LatoWebBlack, 'Arial';
-	text-transform: uppercase;
-	font-size: 10px;
+	& .ui-widget-content .ui-state-highlight
+		border: none;
+		background-color: #F6F6F6;
+		color: #868686;
 
-.calendar .ui-datepicker-calendar tbody a,
-.calendar .ui-datepicker-calendar tbody span
-	color: #868686;
-	background: #F2F2F2;
-	font-family: SourceSansPro-Regular, 'Arial';
-	font-size: 1.25rem;
-	padding: 0.335em;
-	text-align: -webkit-center;
+	& .ui-widget-content .ui-state-default
+		border: none;
 
-.calendar .ui-datepicker-calendar tbody span
-	color: #FFF;
+	& .ui-datepicker-calendar thead
+		background: #e75735;
+		color: #FFF;
+		font-family: LatoWebBlack, 'Arial';
+		text-transform: uppercase;
+		font-size: 10px;
 
-.calendar .ui-state-disabled,
-.calendar .ui-widget-content .ui-state-disabled
-	opacity: 1;
+	& .ui-datepicker-calendar tbody a,
+	& .ui-datepicker-calendar tbody span
+		color: #868686;
+		background: #F2F2F2;
+		font-family: SourceSansPro-Regular, 'Arial';
+		font-size: 1.25rem;
+		padding: 0.335em;
+		text-align: -webkit-center;
 
-.calendar .ui-datepicker .ui-datepicker-title
-	color: #FFF;
-	font-family: LatoWebLight;
-	font-size: 1.4rem;
-	font-weight: normal;
+	& .ui-datepicker-calendar tbody span
+		color: #FFF;
 
-.calendar .ui-datepicker .ui-datepicker-header
-	background: #d54c2c;
+	& .ui-state-disabled,
+	& .ui-widget-content .ui-state-disabled
+		opacity: 1;
 
-.calendar .ui-icon.ui-icon-circle-triangle-e,
-.calendar .ui-icon.ui-icon-circle-triangle-w
-	display: none;
+	& .ui-datepicker .ui-datepicker-title
+		color: #FFF;
+		font-family: LatoWebLight;
+		font-size: 1.4rem;
+		font-weight: normal;
 
-.calendar .ui-datepicker-prev,
-.calendar .ui-datepicker-next
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.5rem;
-	cursor: pointer;
+	& .ui-datepicker .ui-datepicker-header
+		background: #d54c2c;
 
-.calendar .ui-datepicker-prev.ui-datepicker-prev-hover,
-.calendar .ui-datepicker-next.ui-datepicker-next-hover
-	background-color: inherit
-	border-radius: 0;
-	font-weight: inherit;
-	border: 1px solid #d54c2c;
+	& .ui-icon.ui-icon-circle-triangle-e,
+	& .ui-icon.ui-icon-circle-triangle-w
+		display: none;
 
-.calendar .ui-datepicker-prev > *,
-.calendar .ui-datepicker-prev.ui-datepicker-prev-hover > *,
-.calendar .ui-datepicker-next > *,
-.calendar .ui-datepicker-next.ui-datepicker-next-hover > *
-	display: none;
+	& .ui-datepicker-prev,
+	& .ui-datepicker-next
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 1.5rem;
+		cursor: pointer;
 
-.calendar .ui-datepicker-prev::after
-	font-family: FontAwesome;
-	content: '\f104';
-	color: white;
+	& .ui-datepicker-prev.ui-datepicker-prev-hover,
+	& .ui-datepicker-next.ui-datepicker-next-hover
+		background-color: inherit
+		border-radius: 0;
+		font-weight: inherit;
+		border: 1px solid #d54c2c;
 
-.calendar .ui-datepicker-next::after
-	font-family: FontAwesome;
-	content: '\f105';
-	color: white;
+	& .ui-datepicker-prev > *,
+	& .ui-datepicker-prev.ui-datepicker-prev-hover > *,
+	& .ui-datepicker-next > *,
+	& .ui-datepicker-next.ui-datepicker-next-hover > *
+		display: none;
 
+	& .ui-datepicker-prev::after
+		font-family: FontAwesome;
+		content: '\f104';
+		color: white;
+
+	& .ui-datepicker-next::after
+		font-family: FontAwesome;
+		content: '\f105';
+		color: white;
+
+	&__button_today
+		text-transform: uppercase;
+		cursor: pointer;
+		color: #868686;
+		background: #e5e5e5;
+		font-family: LatoWebBlack;
+		font-size: 0.9rem;
+		padding: 1rem 0.6rem 1rem 1.2rem;
+
+	&__day
+		border: none;
+		display: block;
+		width: 100%;
+		background-color: #e75735;
+		color: white;
+		font-family: LatoWebLight, 'Arial';
+		font-size: 4.85rem;
+		text-align: center;
+		padding-top: 1rem;
