Добавлен блок video (не доделан)

--- a/src/index.pug
+++ b/src/index.pug
@@ -98,3 +98,7 @@ html(lang="en")
   br
   include blocks/calendar/calendar.pug
   +calendar()
+  br
+  br
+  include blocks/video/video.pug
+  +video()
