Доделан блок видео
Добавлены параметры у миксинов некоторых блоков

--- a/src/blocks/event/event.pug
+++ b/src/blocks/event/event.pug
@@ -4,12 +4,12 @@ mixin event(options)
 	if !options
 		- options = {}
 	.event
-		img.event__photo(src= options.imgsrc)
+		img.event__photo(src= options.imgsrc ? options.imgsrc : '.\\blocks\\event\\img\\event__default-img.jpg')
 		.event__text
 			.event__date
-				.event__day= options.day
-				.event__month= options.month
-			.event__title= options.title
-			.event__description= options.description
+				.event__day= options.day ? options.day : '1'
+				.event__month= options.month ? options.month : 'January' 
+			.event__title= options.title ? options.title : 'title'
+			.event__description= options.description ? options.description : 'description'
 			.event__button
 				+standart-button('normal','small','add to calendar')
