--- a/src/blocks/user-profile/user-profile.styl
+++ b/src/blocks/user-profile/user-profile.styl
@@ -72,9 +72,11 @@
 	&__link
 		color: white;
 		text-decoration: none;
+		cursor: default;
 
 		&.user-profile__links_active
 			color: #757575;
+			cursor: pointer;
 
 		&.user-profile__links_active:hover
 			color: #e75735;
