--- a/src/blocks/location/location.pug
+++ b/src/blocks/location/location.pug
@@ -1,8 +1,10 @@
-mixin location(phrase, adress)
+mixin location(options)
+	if !options
+		- options = {}
 	.location
-		.location__map
+		.location__map(data-lat= options.lat ? options.lat : '37.79128631', data-lng= options.lng ? options.lng : '-122.41516113')
 		.location__banner
-			span.location__phrase= phrase ? phrase : 'Meet us!'
-			.location__adress= adress ? adress : '1259 california st san francisco, ca'
+			span.location__phrase= options.phrase ? options.phrase : 'Meet us!'
+			.location__adress= options.adress ? options.adress : '1259 california st san francisco, ca'
 			.location__icon.location__icon_crosshairs
 			.location__icon.location__icon_marker
