--- a/src/blocks/news/news.pug
+++ b/src/blocks/news/news.pug
@@ -2,8 +2,8 @@ mixin news(options)
 	if !options
 		- options = {}
 	.news
-		img.news__photo(src= options.imgsrc)
+		img.news__photo(src= options.imgsrc ? options.imgsrc : ".\\blocks\\news\\img\\news__default-img.jpg")
 		.news__text
-			.news__title= options.title
-			.news__date= options.date
-			.news__description= options.description
+			.news__title= options.title ? options.title : 'Title'
+			.news__date= options.date ? options.date : 'Date'
+			.news__description= options.description ? options.description : 'Description'
