--- a/src/blocks/video/video.pug
+++ b/src/blocks/video/video.pug
@@ -1,6 +1,5 @@
-mixin video()
-	<div class="container">
-		<video width="595" height="340">
-			<source src="./video/demo.mp4" type="video/mp4">
-		</video>
-	</div>
+mixin video(src)
+	.video
+		video(width= "595", height= "340")
+			source(src= src ? src : "./video/demo.mp4", type="video/mp4")
+
