--- a/src/blocks/pie-chart/pie-chart.pug
+++ b/src/blocks/pie-chart/pie-chart.pug
@@ -1,4 +1,2 @@
-mixin pie-chart()
-	<canvas class="pie-chart" width="105" height="105"></canvas>
-
-+pie-chart()
+mixin pie-chart(args)
+	canvas(class="pie-chart" width="105" height="105" data-value= args ? args : '12, 25, 30, 33')
